Improvement of screen sizing and positioning

--- a/StrikingInvestigation/Shared/Bell.razor
+++ b/StrikingInvestigation/Shared/Bell.razor
@@ -9,7 +9,7 @@
             --toppos: @bellTopPosStr;
             --diameter: @diameterStr;
             --fontsize: @bellFontSizeStr;
-            --padding: @paddingStr">
+            --paddingtop: @paddingTopStr">
         @Blow.Bell
     </div>
 }
@@ -22,7 +22,7 @@ else
             --toppos: @bellTopPosStr;
             --diameter: @diameterStr;
             --fontsize: @bellFontSizeStr;
-            --padding: @paddingStr">
+            --paddingtop: @paddingTopStr">
         @Blow.Bell
     </div>
 }
