--- a/StrikingInvestigation/Shared/RowStartLabel.razor
+++ b/StrikingInvestigation/Shared/RowStartLabel.razor
@@ -1,5 +1,5 @@
 ﻿<div class="strokelabel"
-        style="--fontsize: @strokeFontSizeStr;
+        style="--fontsize: @strokeLabelFontSizeStr;
         --leftpos: @strokeLabelLeftPosStr;
         --toppos: @strokeLabelTopPosStr">
     @if (Blow.IsHandstroke == true)
@@ -20,7 +20,7 @@
 </div>
 
 <div class="changelabel"
-        style="--fontsize: @changeFontSizeStr;
+        style="--fontsize: @changeLabelFontSizeStr;
         --leftpos: @changeLabelLeftPosStr;
         --toppos: @changeLabelTopPosStr">
     @Blow.ChangeStr
