Added margin to bottom of test pages

--- a/StrikingInvestigation/Shared/Play.razor
+++ b/StrikingInvestigation/Shared/Play.razor
@@ -94,4 +94,8 @@
                 --height: 24px">
         </div>
     }
+
+    <!-- Create margin at bottom of screen -->
+    <div style="height: 38px;">
+    </div>
 </div>
