--- a/StrikingInvestigation/Shared/Submit.razor
+++ b/StrikingInvestigation/Shared/Submit.razor
@@ -39,5 +39,9 @@
                 Submitted
             </div>
         }
+
+        <!-- Create margin at bottom of screen -->
+        <div style="height: 38px;">
+        </div>
     </div>
 }
