--- a/StrikingInvestigation/Shared/SubmitAB.razor
+++ b/StrikingInvestigation/Shared/SubmitAB.razor
@@ -132,6 +132,8 @@
             <source src="@TestSpec.ResultSource" />
         </audio>
     }
+
+    <!-- Create margin at bottom of screen -->
+    <div style="height: 38px;">
+    </div>
 </div>
-
-
